unpackaged/main/default/objects/Case_Content_Purge_Action__c/Case_Content_Purge_Action__c.object-meta.xml
<CustomObject>
    <description>Used to manage Case Content Purging in regard to Privacy policy</description>
    <label>Case Content Purge Action</label>
    <nameField>
        <label>Case Content Purge Action Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Content Purge Action</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>