unpackaged/main/default/objects/Case_Content_Purge_Action__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <defaultValue>&#39;Delete&#39;</defaultValue>
    <inlineHelpText>Choose the type of action to be processed. Statistics Only will generate an Action Process record containing the number of records affected and it will not delete any data.</inlineHelpText>
    <label>Action</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Statistics Only - No delete</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>