unpackaged/main/default/objects/Case_Content_Purge_Action__c/fields/Closed_Date_From__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_From__c</fullName>
    <label>Closed Date From</label>
    <required>true</required>
    <type>Date</type>
</CustomField>