unpackaged/main/default/objects/Case_Content_Purge_Action__c/fields/Closed_Date_To__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date_To__c</fullName>
    <defaultValue>ADDMONTHS( TODAY() ,$Setup.T1_Control_Settings__c.Case_Content_Retention_Months__c * -1)</defaultValue>
    <label>Closed Date To</label>
    <required>true</required>
    <type>Date</type>
</CustomField>