unpackaged/main/default/objects/Case_Content_Purge_Action__c/fields/Items_to_Purge__c.field-meta.xml
<CustomField>
    <fullName>Items_to_Purge__c</fullName>
    <label>Items to Purge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Items_to_Purge</valueSetName>
    </valueSet>
</CustomField>