unpackaged/main/default/objects/Case_Content_Purge_Action__c/fields/Recurring_Action__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked this causes the Closed Date To to be recalculated after each process using Case Content Retention Months from T1 Control Setting. This allows for continuous processing based on age.</description>
    <inlineHelpText>If checked this causes the Closed Date To to be recalculated after each process using Case Content Retention Months from T1 Control Setting. This allows for continuous processing based on age.</inlineHelpText>
    <label>Recurring Action</label>
    <type>Checkbox</type>
</CustomField>