unpackaged/main/default/objects/Case_Content_Purge_Action__c/validationRules/DateFromLTDateTo.validationRule-meta.xml
<ValidationRule>
    <fullName>DateFromLTDateTo</fullName>
    <active>false</active>
    <errorConditionFormula>NOT( Closed_Date_From__c &lt; Closed_Date_To__c )</errorConditionFormula>
    <errorMessage>Closed Date From must be before Closed Date To</errorMessage>
</ValidationRule>