unpackaged/main/default/objects/Case_Content_Purge_Action__c/validationRules/DateToLimit.validationRule-meta.xml
<ValidationRule>
    <fullName>DateToLimit</fullName>
    <active>false</active>
    <errorConditionFormula>Closed_Date_To__c + -2 &gt; ADDMONTHS( TODAY() ,$Setup.T1_Control_Settings__c.Case_Content_Retention_Months__c * -1)</errorConditionFormula>
    <errorDisplayField>Closed_Date_To__c</errorDisplayField>
    <errorMessage>Closed Date To cannot be within the data retention period</errorMessage>
</ValidationRule>